@@ -1,3 +1,7 @@
+2007-07-xx Jeff Connelly <jeff2@soc.pidgin.im> - 0.11
+* Allow going idle (tested with I'dle Ma'ker) and viewing idle status of buddies
+ (thanks to Scott Ellis for finding the idle status code.)
+
 2007-07-03 Jeff Connelly <jeff2@soc.pidgin.im> - 0.10
 * On incoming instant messages, add support for:
  * Text color
